--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ addopts = '-p no:warnings'
 [tool.poetry.dependencies]
 python = "3.12.*"
 fastapi = "^0.111.1"
+pydantic = {extras = ["email"], version = "^2.8.2"}
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.5"
@@ -26,20 +27,19 @@ extend-exclude = ['migrations']
 [tool.ruff.lint]
 preview = true
 select = ['I', 'F', 'E', 'W', 'PL', 'PT']
+#ignore = ['E402', 'F811']
 
 [tool.ruff.format]
 preview = true
 quote-style = 'single'
 
 [tool.taskipy.tasks]
+lint = 'ruff check .; ruff check . --diff'
+format = 'ruff check . --fix; ruff format .'
 run = 'fastapi dev fast_zero/app.py'
-
 pre_test = 'task lint'
-test = 'pytest --cov=fast_zero -vv'
+test = 'pytest -s -x --cov=fast_zero -vv'
 post_test = 'coverage html'
-
-lint = 'ruff check . && ruff check . --diff'
-format = 'ruff check . --fix && ruff format .'
 
 [build-system]
 requires = ["poetry-core"]
