--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ addopts = '-p no:warnings'
 python = "3.12.*"
 fastapi = "^0.111.1"
 pydantic = {extras = ["email"], version = "^2.8.2"}
+sqlalchemy = "^2.0.31"
+pydantic-settings = "^2.3.4"
+alembic = "^1.13.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.5"
